--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </header>
 
   <section id="home" class="hero">
-      <img src="img/IMG_2274.jpeg" alt="Rallyfotografie" />
+      <img src="img/foto rally auto" alt="Rallyfotografie" />
       <div class="hero-text">
           <h1>Welkom bij JD Photography</h1>
           <p>Professionele rally fotografie met passie en snelheid</p>
